# blind

./: .env.bot  .env.docker  .gitignore  LICENSE  README.md  agenda.json  docker-compose.yml  dockerfile  manager.py  pyproject.toml  requirements.txt  testing.py
.github/workflows/: deploy.yml
blind/: manager.py
blind/src/: main.py
blind/src/apps/: postdata_controler.py
blind/src/apps/llm/: llmactions.py  main.py  main_audio.py  main_documents.py  main_image.py
blind/src/apps/llm/lib/: handler.py  objects.py  path.py
blind/src/apps/llm/lib/functions/: audio.py  calculadora.py  chat.py  get_info_user.py  graficarfuncion.py  ip.py  search.py  send_dm.py  shodan.py  testfunctions.py  web.py  youtube.py
blind/src/apps/programmer/: main.py
blind/src/apps/programmer/lib/: path.py
blind/src/apps/programmer/lib/functions/: executor.py  ide.py
blind/src/notifiers/objects/: bot.py
blind/src/utils/: repo.py  utilities.py  vars.py
data/: download_sample_dataset.py
scripts/: download_sample_dataset.py
src/: main.py
src/apps/: postdata_controler.py
src/apps/basics/: wellcome.py
src/apps/llm/: llmactions.py  main.py  main_audio.py  main_documents.py  main_image.py
src/apps/llm/lib/: handler.py  objects.py  path.py  serializer.py
src/apps/llm/lib/functions/: bin.py  calculadora.py  chat.py  cronjobs.py  get_info_user.py  graficarfuncion.py  ip.py  pdf.py  search.py  send_dm.py  shodan.py  web.py  youtube.py
src/notifiers/: main.py
src/notifiers/objects/: bot.py
src/utils/: repo.py  utilities.py  vars.py
(+7 files in other folders)
