[tool.poetry]
name = "blind"
version = "0.1.0"
description = "Bot de telegram"
authors = ["techatlasdev <srgoqui@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
watchdog = "^6.0.0"
pyrogram = "^2.0.106"
python-dotenv = "^1.0.1"
pyht = "^0.1.12"
google-generativeai = "^0.8.4"
matplotlib = "^3.10.0"
pdfkit = "^1.0.0"
jinja2 = "^3.1.5"
bs4 = "^0.0.2"

[tool.poetry.scripts]
dev = "blind.manager:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
